# fossil-test

./: CMakeLists.txt  Dockerfile  README.md  SECURITY.md  conanfile.py  meson.build  meson.options  pizza_test.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ciimage/: Dockerfile.alpine  Dockerfile.archlinux  Dockerfile.centos  Dockerfile.debian  Dockerfile.fedora  Dockerfile.opensuse  Dockerfile.raspberrypi  Dockerfile.ubuntu
.github/crossfiles/: arm.txt  arm64.txt  mips.txt  mipsel.txt  ppc.txt  ppc64le.txt  riscv64.txt  s390x.txt  sparc64.txt
.github/workflows/: cmake_ci.yml  conan_ci.yml  conanfile_ci.yml  container_ci.yml  crossfile_ci.yml  docker_ci.yml  dockerfile_ci.yml  meson_ci.yml
code/: CMakeLists.txt  meson.build
code/binds/: meson.build
code/binds/d/: .gitkeep  mark.d  mock.d  sanity.d  test.d
code/binds/java/: Mark.java  Mock.java  Sanity.java  Test.java
code/binds/python/: __init__.py  mark.py  mock.py  sanity.py  test.py
code/include/: meson.build
code/include/fossil/: mockup.h  module.h  unittest.h  xassert.h  xassume.h  xexcept.h  xexpect.h  xsanity.h  xtest.h
code/include/fossil/_common/: platform.h
code/include/fossil/benchmark/: benchmark.h  framework.h
code/include/fossil/common/: common.h
code/include/fossil/mockup/: behavior.h  fake.h  file.h  inject.h  input.h  internal.h  mockup.h  network.h  output.h  spy.h  stub.h
code/include/fossil/unittest/: benchmark.h  commands.h  common.h  console.h  feature.h  framework.h  internal.h  introspect.h  types.h
code/include/fossil/xassert/: boolean.h  floating.h  letter.h  memory.h  numeric.h  string.h  within.h
code/include/fossil/xassume/: boolean.h  floating.h  letter.h  memory.h  numeric.h  string.h  within.h
code/include/fossil/xexcept/: boolean.h  floating.h  letter.h  memory.h  numeric.h  string.h  within.h
code/include/fossil/xexpect/: boolean.h  floating.h  letter.h  memory.h  numeric.h  string.h  within.h
code/include/fossil/xsanity/: boolean.h  floating.h  letter.h  memory.h  numeric.h  string.h  within.h
code/include/fossil/xtest/: common.h  internal.h  introspect.h  platform.h
code/logic/: CMakeLists.txt  benchmark.c  common.c  internal.c  mark.c  marking.c  meson.build  mock.c  mocking.c  mockup.c  sanity.c  stream.c  test.c  testing.c  unittest.c
code/logic/benchmark/: meson.build
code/logic/fossil/_common/: common.h  platform.h
code/logic/fossil/benchmark/: benchmark.h
code/logic/fossil/internal/: stream.c
code/logic/fossil/maip/: assume.h  common.h  mark.h  mock.h  sanity.h  test.h
code/logic/fossil/mockup/: framework.h
code/logic/fossil/pizza/: assume.h  common.h  framework.h  mark.h  marking.h  mock.h  sanity.h  test.h
code/logic/fossil/pizza/internal/: stream.h
code/logic/fossil/test/: assume.h  benchmark.h  framework.h  internal.h  marking.h  mocking.h  mockup.h  testing.h  unittest.h
code/logic/fossil/test/internal/: internal.h  stream.h
code/logic/fossil/unittest/: assert.h  assume.h  expect.h  framework.h  internal.h  unittest.h
code/logic/fossil/unittest/assume/: numeric.h  string.h
code/logic/fossil/unittest/expect/: numeric.h  within.h
code/logic/mockup/: mockup.c
code/logic/unittest/: commands.c  console.c  meson.build  old-unittest.c  unittest.c
code/source/: behavior.c  fake.c  file.c  inject.c  input.c  meson.build  mockup_behavior.c  mockup_fake.c  mockup_file.c  mockup_inject.c  mockup_input.c  mockup_network.c  mockup_output.c  mockup_spy.c  mockup_stub.c  module.c  network.c  output.c  spy.c  stub.c  unittest_features.c  xmock.c  xtest.c
code/source/benchmark/: benchmark.c
code/source/mockup/: behavior.c  fake.c  file.c  inject.c  input.c  meson.build  mockup.c  network.c  output.c  spy.c  stub.c
code/source/unittest/: benchmark.c  commands.c  console.c  features.c  old-unittest.c  unittest.c
code/tests/: CMakeLists.txt  generate-runner.py  meson.build  pizza_test.ini  test_bdd.c  test_marks.c  test_mocks.c  test_sample.c  test_tags.c  test_tdd.c  test_xsoneros.c  test_xsonireo.c  unit_runner.c  unit_runner.cpp
code/tests/cases/: test_bdd.c  test_bdd.cpp  test_bdd.m  test_bdd.mm  test_ddd.c  test_ddd.cpp  test_ddd.m  test_ddd.mm  test_mark.c  test_mark.cpp  test_mark.m  test_mark.mm  test_mock.c  test_mock.cpp  test_mock.m  test_mock.mm  test_sample.c  test_sample.cpp  test_sample.m  test_sample.mm  test_sanity.c  test_sanity.cpp  test_sanity.m  test_sanity.mm  test_tdd.c  test_tdd.cpp  test_tdd.m  test_tdd.mm
code/tests/tools/: bedrock-wrapper.py  generate-runner.py  runner.py  wildcard.py
crossfiles/: cross_file_android_arm64.txt  cross_file_ios_arm64.txt  cross_file_ios_x86_64.txt  cross_file_sparc.txt
subprojects/: fscl-xassume-c.wrap  fscl-xcommon-c.wrap  fscl-xmock-c.wrap  fscl-xtest-c.wrap
test/: example.txt  generate-runner.py  meson.build  test_bdd.c  test_marks.c  test_mocks.c  test_tags.c  test_tdd.c  test_xfixture.c  xtest_assert_boolean.c  xtest_assert_floating.c  xtest_assert_letter.c  xtest_assert_memory.c  xtest_assert_numeric_hex.c  xtest_assert_numeric_int.c  xtest_assert_numeric_oct.c  xtest_assert_numeric_uint.c  xtest_assert_string.c  xtest_assert_within.c  xtest_assume_boolean.c  xtest_assume_floating.c  xtest_assume_letter.c  xtest_assume_memory.c  xtest_assume_numeric_hex.c  xtest_assume_numeric_int.c  xtest_assume_numeric_oct.c  xtest_assume_numeric_uint.c  xtest_assume_within.c  xtest_bdd.c  xtest_behavior.c  xtest_bench.c  xtest_cases.c  xtest_fake.c  xtest_file.c  xtest_inject.c  xtest_input.c  xtest_internal.c  xtest_markers.c  xtest_mocks.c  xtest_network.c  (+8 more)
